fix design on smaller screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   transition: all .3s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
@@ -430,24 +434,31 @@ a {
 .team {
   max-width: 1000px;
   margin: 0 auto;
-  height: 850px;
+  /* height: 850px; */
   align-items: center;
   display: grid;
   margin-bottom: 80px;
 }
 
 .team-header {
-  width: 80%;
+  width: 85%;
   margin: 0 auto;
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .team-header h1 {
   font-size: 48px;
   font-weight: medium;
   letter-spacing: 0px;
-  color: #000000DE;
+  color: #3D3D3D;
   opacity: 1;
+}
+
+.team-header p {
+  font-weight: 300;
+  font-size: 21px;
+
 }
 
 .team-group {
@@ -605,7 +616,7 @@ a {
     font-size: 38px;
     font-weight: medium;
     letter-spacing: 0px;
-    color: #000000DE;
+    color: #3D3D3D;
     opacity: 1;
     padding-top: 30px;
   }
@@ -613,6 +624,8 @@ a {
   .team-header p {
     padding: 0 20px ;
     /* width: 100%; */
+    font-weight: 300;
+    font-size: 21px;
   }
 
   .team-group {
@@ -667,6 +680,17 @@ a {
   margin: 0 auto;
   text-align: center;
   padding: 0 20px;
+}
+.product-header h1 {
+  font-size: 48px;
+  margin: 10px;
+  font-weight: 400;
+  color: #3D3D3D;
+}
+.product-header span {
+  font-size: 20px;
+  font-weight: 300;
+
 }
 .product {
   background: #FFFFFF 0% 0% no-repeat padding-box;
